video effect - fixed bug on Firefox

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -711,6 +711,10 @@ Video
 
 -------------------------------- */
 
+.cd-intro.video {
+	display: block;
+}
+
 .video.cd-intro-content {
 	display: block;
 	height: 100%;
